js操作获取值，激活jrebel, 安装mysql